src/styles/App.scss
@import 'reset';
@import 'variables';
@import 'navigation';
@font-face {
  font-family: 'Medieval';
  src: url('./MedievalSharp-Bold.ttf') format('truetype');
}

body {
  font-family: arial;
}

a,
button {
  cursor: pointer;
}

.cta-btn {
  display: flex;
  align-items: center;
}

.container {
  display: grid;
  justify-items: center;
  min-height: 100vh;
  grid-template-columns: 1fr;
  grid-template-rows: auto 1fr auto;
  grid-template-areas:
    'header'
    'main'
    'footer';

  header {
    grid-area: header;
    width: 100%;
  }

  main {
    padding: 1.5rem;
    grid-area: main;
    overflow: auto;
    width: 100%;
  }

  footer {
    grid-area: footer;
    padding: 2rem;
    font-size: 1.4em;
    background-color: #690;
    color: white;
    width: 100%;
  }
}

